# NewRepo2

./: CUBE_QUICK_START.md  DIAGRAM_FIXES_REPORT.md  DIAGRAM_IMPROVEMENTS_QUICK.md  DIAGRAM_QUICK_GUIDE.md  DIAGRAM_SUCCESS_REPORT.md  GRAPHICS_DIAGNOSIS_REPORT.md  GRAPHICS_FIXED_REPORT.md  INTERACTIVE_CUBE_TEST_REPORT.md  OFFICIAL_QT_QUICK_3D_STATUS.md  ORBIT_CAMERA_FIX.md  QUICK_CHECK.md  QUICK_SUMMARY.md  README_ADVANCED_QT3D.md  REALISTIC_MAXIMUM.md  REALISTIC_SUSPENSION_README.md  app.py  demo_advanced_qt3d.py  pyproject.toml  requirements.txt  run_cube_test.ps1  run_detailed_test.ps1  run_diagram.py  run_realistic.py  run_realistic_suspension.ps1  run_test_debug.ps1  test_orbit_fix.sh
assets/qml/: main.qml  main_advanced.qml  main_official.qml
src/ui/: main_window.py
